# mcviewer

./: Makefile.am  NOTES  README.md  TODO  configure.ac
resources/: NOTES  r.0.0.mca  shader.frag  shader.vert
src/: main.c  math3d.c  math3d.h  myz.c  myz.h  nbt.c  nbt.h  nbt_utils.c  nbt_utils.h  shader.c  shader.h
