AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = -I m4 --install

# Files we want to be packaged in the tar ball distribution
EXTRA_DIST = 	README.md 

bin_PROGRAMS = mcviewer

mcviewer_SOURCES = \
		src/myz.c \
		src/myz.h \
		src/main.c
			

#hello_CFLAGS = @SDL_CFLAGS@ -DDATA_PATH='"$(pkgdatadir)"'
#hello_LDADD = @SDL_LIBS@
