AC_INIT([mcviewer], [1.0], [andy_ball7@hotmail.com], [], [adreamingworld.com])
#AC_CANONICAL_HOST
#AC_CANONICAL_TARGET

AC_CONFIG_AUX_DIR(build-aux)
AM_INIT_AUTOMAKE([foreign])

AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])

AC_CHECK_HEADERS([stdlib.h])

PKG_CHECK_MODULES([ZLIB], [zlib])

AC_OUTPUT

